examples/openshift/web/deployment.yaml
objects:
- <<: (( merge ))
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: jitsi
    name: web
  spec:
    replicas: 1
    strategy:
      type: Rolling
    template:
      metadata:
        labels:
          app: jitsi
          name: web
      spec:
        containers:
        - envFrom:
          - configMapRef:
              name: jitsi-config
          - secretRef:
              name: jitsi-secret
          image: jitsi/web
          imagePullPolicy: Always
          name: web
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 3
            timeoutSeconds: 60
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 3
          ports:
          - containerPort: 8080
          - containerPort: 4443
          resources: {}
          volumeMounts:
          - mountPath: /usr/share/jitsi-meet/transcripts
            name: jigasi-transcripts
        volumes:
        - name: jigasi-transcripts
          persistentVolumeClaim:
            claimName: jigasi-transcripts-volume
    triggers:
    - type: ConfigChange
  status: {}
